Bug 112770 - Dead keys not working with KDE4 or gen VCL backend
Summary: Dead keys not working with KDE4 or gen VCL backend
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-09-30 11:39 UTC by RGB
Modified: 2017-11-08 07:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2017-09-30 11:39:06 UTC
Downloaded a recent (today) archive build from here:

http://dev-builds.libreoffice.org/daily/master/

Version: 6.0.0.0.alpha0+
Build ID: 13df3777e4b6ff7537692b396be67a5fd2b9b001

I'm testing it on openSUSE 42.2, 64 bits, with Plasma (KDE) desktop and Spanish keyboard (locale is correctly set). 

Starting LibO-dev with default KDE4 VLC plug-in, dead keys to insert accented characters do not work: the diacritic is not combined with the vowel. For example the sequence ' then a only gives a instead of á.

Starting the program with

  SAL_USE_VCLPLUGIN=gtk3 ./swriter 

dead-keys work as intended, so it's a problem with the KDE4 plug-in on 6.0alpha (dead keys work on both, 5.4.1 and 5.3.6).

Starting the program from terminal does not give any message.
Comment 1 Buovjaga 2017-11-03 14:44:42 UTC
Yes, this is quite bad. No repro with gtk, but do repro with gen.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha1+
Build ID: 64024d7c18bd114eb9958cf80eea9129e09923bd
CPU threads: 8; OS: Linux 4.13; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on November 3rd 2017
Comment 2 Xisco Faulí 2017-11-04 09:23:23 UTC
Regression introduced by:

author	Jan-Marek Glogowski <glogow@fbihome.de>	2017-09-04 15:40:13 (GMT)
committer	Jan-Marek Glogowski <glogow@fbihome.de>	2017-09-28 15:48:37 (GMT)
commit e310c00709ed4fe0788aeff5142e3581d8b4d319 (patch)
tree b85827742e4a93a57150b5d8d254ea85a6265379
parent dea1b649765262b2e8beac88b0977d5dead98953 (diff)
Unify SalUserEvent handling
Merges the various SalUserEvent structs and their handling into
a single class. This includes a common SalFrame* hash map, as all
backends use such a map to verify alive SalFrames.

It also reverts the "FIXME: lousy workaround" for i#90083, which
was part of commit d6f7c94e5c27ba02ff5c3229760c9808cc9b5bea.

At least on my current OSX box application based window switching
"just works" "out of the box", even without the code.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Jan-Marek Glogowski
Comment 3 Commit Notification 2017-11-07 12:34:37 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f521e8b7d0fb60f173be56808559cac2e0c3a14

tdf#112770 Filter input on the correct window

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-11-08 07:56:02 UTC
Verified in

Version: 6.0.0.0.alpha1+
Build ID: 5e0022c90c4125a1590b3688dfec73c271b7aedd
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group