tdf#112770 Filter input on the correct window

This filters the input event on the correct window in
SalX11Display::Dispatch.

I'm not sure there is a point of skipping the filter for input
events, which are not on our windows, as we already filter all
non-key input events. Has been like that in the initial import,
but whi knows what input methods do with different events...

After reviewing the original "Unify SalUserEvent handling" commit
e310c00709ed4fe0788aeff5142e3581d8b4d319, I found two more places,
which now have handled user events wrong and fixed them.

Change-Id: I50a60f6dacc3f795e659b6fbfd107548d07a3341